--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,19 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "beyondcode/laravel-websockets": "^1.7",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
+        "fzaninotto/faker": "^1.9.1",
         "guzzlehttp/guzzle": "^6.3",
+        "kreait/laravel-firebase": "^2.3",
         "laravel/framework": "^7.0",
         "laravel/nexmo-notification-channel": "^2.3",
         "laravel/socialite": "^4.4",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "mcamara/laravel-localization": "^1.5",
-        "fzaninotto/faker": "^1.9.1",
+        "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^4.1"
     },
     "require-dev": {
