--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
         "flatted": "^3.0.2",
+        "ioredis": "^4.17.3",
         "jscroll": "^2.4.1",
         "laravel-echo": "^1.8.1",
         "pusher-js": "^7.0.0",
+        "socket.io-client": "^2.3.0",
         "turbolinks": "^5.2.0",
         "twitter-text": "^3.1.0"
     }
